<resources>
    <string name="app_name">CIS Invoice Generator</string>
    <string name="textview">TextView</string>
    <string name="save_invoice">Save Invoice</string>
    <string name="add_day">Add Day</string>
    <string name="work_carried_out">Work Carried Out</string>
    <string name="press_to_enter_date">Press to enter Date</string>
    <string name="add_days_worked">Add Days worked</string>
    <string name="enter_work_carried_out">Enter work carried out</string>
    <string name="date_worked">Date Worked</string>
    <string name="hours_worked">Hours Worked</string>
    <string name="hourly_rate">Hourly Rate</string>
    <string name="start_time">Start Time</string>
    <string name="date">Date</string>
    <string name="end_time">End Time</string>
    <string name="delete_invoice">Delete Invoice</string>
    <string name="total_time">Total</string>
    <string name="total_time2">Total</string>
    <string name="id">ID</string>
    <string name="show_invoice">Show Invoice</string>
    <string name="email_invoice">Email Invoice</string>
    <string name="cancel">Cancel</string>
</resources>
